--- a/requirements_pip.txt
+++ b/requirements_pip.txt
@@ -1,280 +1,11 @@
-absl-py==0.13.0
-airdrop-ng==1.1
-airgraph-ng==1.1
-alabaster==0.7.12
-anyio==3.3.0
-apparmor==3.0.1
-appdirs==1.4.4
-application-utility==1.3.2
-argon2-cffi==20.1.0
-astroid==2.4.2
-astunparse==1.6.3
-async-generator==1.10
-attrs==20.3.0
-autopep8==1.5.6
-Babel==2.9.1
-backcall==0.2.0
-basemap==1.2.1
-Beaker==1.11.0
-bleach==3.2.2
-btrfsutil==5.13
-bump2version==1.0.1
-CacheControl==0.12.6
-cachetools==4.2.2
-ceph==1.0.0
-ceph-volume==1.0.0
-cephfs==2.0.0
-cephfs-shell==0.0.1
-certifi==2020.12.5
-cffi==1.14.6
-chardet==4.0.0
-colorama==0.4.4
-coloredlogs==15.0
-contextlib2==0.6.0.post1
-coverage==5.5
-cryptography==3.4.7
-cupshelpers==1.0
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.7.1
-deprecation==2.1.0
-distlib==0.3.2
-distro==1.5.0
-dnspython==1.16.0
-docopt==0.6.2
-docutils==0.16
-domdf-python-tools==2.7.0
-domdf-wxpython-tools==0.2.5
-entrypoints==0.3
-evdev==1.4.0
-ExifRead==2.3.2
-filelock==3.0.12
-flake8==3.9.1
-flann==1.9.1
-flatbuffers==1.12
-frozendict==1.2
-future==0.18.2
-gast==0.4.0
-GDAL==3.3.0
-google-auth==1.33.1
-google-auth-oauthlib==0.4.4
-google-pasta==0.2.0
-grpcio==1.34.1
-h5py==3.1.0
-html5lib==1.1
-humanfriendly==9.1
-idna==3.2
-imageio==2.9.0
-imagesize==1.2.0
-img2pdf==0.4.0
-importlib-metadata==4.6.1
-ipykernel==5.4.3
-ipython==7.19.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-isort==5.7.0
-jedi==0.18.0
-jeepney==0.6.0
-Jinja2==3.0.1
-joblib==1.0.1
-json5==0.9.6
-jsonschema==3.2.0
-jupyter-client==6.1.11
-jupyter-console==6.2.0
-jupyter-core==4.7.0
-jupyter-packaging==0.10.4
-jupyter-server==1.10.1
-jupyterlab==3.1.0
-jupyterlab-pygments==0.1.2
-jupyterlab-server==2.6.1
-jupyterlab-widgets==1.0.0
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
-keyring==23.0.1
-keyutils==0.6
-kiwisolver==1.3.1
-lazy-object-proxy==1.4.3
-LibAppArmor==3.0.1
-libtorrent===1.2.14-build-libtorrent-rasterbar-src-libtorrent-rasterbar-1.2.14-bindings-python
-lit==0.10.1.dev0
-llvmlite==0.35.0
-louis==3.18.0
-lxml==4.6.3
-lzf==0.1
-Mako==1.1.4
-Markdown==3.3.4
-MarkupSafe==2.0.1
-mathematical==0.4.0
-matplotlib==3.4.2
-matplotlib-inline==0.1.2
-mccabe==0.6.1
-mistune==0.8.4
-Mopidy==3.2.0
-more-itertools==8.8.0
-MouseInfo==0.1.3
-msgpack==1.0.2
-natsort==7.1.1
-nbclassic==0.3.1
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.1.2
-nest-asyncio==1.4.3
-netsnmp-python==1.0a1
-networkx==2.5.1
-nose==1.3.7
-notebook==6.2.0
-npyscreen==4.10.5
-numba==0.50.0.dev0+2009.ga7c18d924
-numpngw==0.0.8
-numpy==1.21.1
-oauthlib==3.1.1
-ocrmypdf==11.7.3
-onboard==1.4.1
-opencv-python==4.5.3.56
-opt-einsum==3.3.0
-ordered-set==4.0.2
-OWSLib==0.24.1
-packaging==20.9
-pacman-mirrors==4.21.5
-pandas==1.2.3
-pandocfilters==1.4.3
-parso==0.8.1
-pdfminer.six==20201018
-pep517==0.11.0
-pexpect==4.8.0
-pickleshare==0.7.5
-pid==3.0.4
-pikepdf==2.9.1
-Pillow==8.3.1
-pipenv==2021.5.29
-Pivy==0.6.5
-pkginfo==1.7.0
-platformdirs==2.0.2
-pluggy==0.13.1
-ply==3.11
-progress==1.5
-prometheus-client==0.9.0
-prompt-toolkit==3.0.11
-protobuf==3.17.3
-psutil==5.8.0
-psycopg2==2.9.1
-ptyprocess==0.7.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyAutoGUI==0.9.52
-pybind11==2.7.0
-pycairo==1.20.0
-pycodestyle==2.7.0
-pycparser==2.20
-pycups==2.0.1
-pycurl==7.43.0.6
-pydash==4.9.3
-pyflakes==2.3.1
-pygame==2.0.1
-PyGetWindow==0.0.9
-Pygments==2.9.0
-PyGObject==3.40.1
-pykka==3.0.1
-pylint==2.6.0
-PyMsgBox==1.0.9
-pynput==1.7.3
-PyOpenGL==3.1.5
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
-pyperclip==1.8.2
-pyproj==3.0.1
-Pypubsub==4.0.3
-PyQt5==5.15.4
-PyQt5-sip==12.9.0
-PyRect==0.1.4
-pyrsistent==0.17.3
-PyScreeze==0.1.27
-pyserial==3.5
-PySetWacom==0.1.8
-PySide2==5.15.2
-pysmbc==1.0.23
-python-dateutil==2.8.1
-python-xlib==0.29
-python3-xlib==0.15
-PyTweening==1.0.3
-pytz==2021.1
-PyWavelets==1.1.1
-PyYAML==5.4.1
-pyzmq==21.0.1
-QScintilla==2.13.0
-qtconsole==5.0.2
-QtPy==1.9.0
-rados==2.0.0
-randomcolor==0.4.4.5
-rbd==2.0.0
-readme-renderer==29.0
-reportlab==3.5.68
-requests==2.26.0
-requests-oauthlib==1.3.0
-requests-toolbelt==0.9.1
-requests-unixsocket==0.2.0
-resolvelib==0.5.5
-retrying==1.3.3
-rfc3986==1.4.0
-rgw==2.0.0
-rsa==4.7.2
-scikit-image==0.18.1
-scikit-learn==0.24.2
-scipy==1.7.0
-SecretStorage==3.3.1
-Send2Trash==1.5.0
-sh==1.14.1
-Shapely==1.7.1
-shiboken2==5.15.2
-simple-http-server==0.11.4
-sip==4.19.25
-six==1.15.0
-snakeviz==2.1.0
-sniffio==1.2.0
-snowballstemmer==2.1.0
-sortedcontainers==2.3.0
-sounddevice==0.4.1
-Sphinx==3.5.4
-sphinx-rtd-theme==0.5.2
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-team==1.0
-tensorboard==2.5.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.5.0
-tensorflow-estimator==2.5.0
-termcolor==1.1.0
-terminado==0.9.2
-testpath==0.4.4
-threadpoolctl==2.2.0
-tifffile==2021.4.8
-tinycss==0.4
-toml==0.10.2
-tomli==1.1.0
-tomlkit==0.7.2
-torch==1.9.0
-tornado==6.1
-tqdm==4.59.0
-traitlets==5.0.5
-trimesh==3.9.23
-twine==3.4.1
-typing-extensions==3.7.4.3
-udiskie==2.3.3
-urllib3==1.26.6
-virtualenv==20.6.0
-virtualenv-clone==0.5.5
-vosk==0.3.21
-wcwidth==0.2.5
-webcolors==1.11.1
-webencodings==0.5.1
-websocket-client==0.59.0
-Werkzeug==2.0.1
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-wxPython==4.0.7.post2
-zipp==3.5.0
+cycler==0.11.0
+fonttools==4.28.5
+kiwisolver==1.3.2
+matplotlib==3.5.1
+numpy==1.22.0
+packaging==21.3
+Pillow==9.0.0
+pygame==2.1.2
+pyparsing==3.0.6
+python-dateutil==2.8.2
+six==1.16.0
